src/main/java/pp/block4/cc/cfg/FragmentParser.java
// Generated from Fragment.g4 by ANTLR 4.4
package pp.block4.cc.cfg;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class FragmentParser extends Parser {
    public static final int
            DOT = 1, SEMI = 2, COMMA = 3, LSQ = 4, RSQ = 5, ASSIGN = 6, NOT = 7, OR = 8, AND = 9, BIT_OR = 10,
            BIT_AND = 11, PLUS = 12, MINUS = 13, LT = 14, GT = 15, EQ = 16, NE = 17, LCURLY = 18,
            RCURLY = 19, LPAR = 20, RPAR = 21, IN = 22, PRINT = 23, BOOL = 24, INT = 25, WHILE = 26,
            IF = 27, ELSE = 28, TRUE = 29, FALSE = 30, BREAK = 31, CONTINUE = 32, ID = 33, NUM = 34,
            STRING = 35, WS = 36;
    public static final String[] tokenNames = {
            "<INVALID>", "'.'", "';'", "','", "'['", "']'", "'='", "'!'", "'||'",
            "'&&'", "'|'", "'&'", "'+'", "'-'", "'<'", "'>'", "'=='", "'!='", "'{'",
            "'}'", "'('", "')'", "'in'", "'printf'", "'boolean'", "'int'", "'while'",
            "'if'", "'else'", "'true'", "'false'", "'break'", "'continue'", "ID",
            "NUM", "STRING", "WS"
    };
    public static final int
            RULE_program = 0, RULE_stat = 1, RULE_target = 2, RULE_expr = 3, RULE_type = 4;
    public static final String[] ruleNames = {
            "program", "stat", "target", "expr", "type"
    };
    public static final ATN _ATN =
            new ATNDeserializer().deserialize(_serializedATN.toCharArray());
    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();

    static {
        RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION);
    }

    static {
        _decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
        for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
            _decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
        }
    }

    public FragmentParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    @Override
    public String getGrammarFileName() {
        return "Fragment.g4";
    }

    @Override
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public final ProgramContext program() throws RecognitionException {
        ProgramContext _localctx = new ProgramContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_program);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(11);
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                        {
                            setState(10);
                            stat();
                        }
                    }
                    setState(13);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LCURLY) | (1L << PRINT) | (1L << BOOL) | (1L << INT) | (1L << WHILE) | (1L << IF) | (1L << BREAK) | (1L << CONTINUE) | (1L << ID))) != 0));
                setState(15);
                match(EOF);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final StatContext stat() throws RecognitionException {
        StatContext _localctx = new StatContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_stat);
        int _la;
        try {
            setState(69);
            switch (_input.LA(1)) {
                case BOOL:
                case INT:
                    _localctx = new DeclContext(_localctx);
                    enterOuterAlt(_localctx, 1);
                {
                    setState(17);
                    type();
                    setState(18);
                    match(ID);
                    setState(21);
                    _la = _input.LA(1);
                    if (_la == ASSIGN) {
                        {
                            setState(19);
                            match(ASSIGN);
                            setState(20);
                            expr(0);
                        }
                    }

                    setState(23);
                    match(SEMI);
                }
                break;
                case ID:
                    _localctx = new AssignStatContext(_localctx);
                    enterOuterAlt(_localctx, 2);
                {
                    setState(25);
                    target();
                    setState(26);
                    match(ASSIGN);
                    setState(27);
                    expr(0);
                    setState(28);
                    match(SEMI);
                }
                break;
                case IF:
                    _localctx = new IfStatContext(_localctx);
                    enterOuterAlt(_localctx, 3);
                {
                    setState(30);
                    match(IF);
                    setState(31);
                    match(LPAR);
                    setState(32);
                    expr(0);
                    setState(33);
                    match(RPAR);
                    setState(34);
                    stat();
                    setState(37);
                    switch (getInterpreter().adaptivePredict(_input, 2, _ctx)) {
                        case 1: {
                            setState(35);
                            match(ELSE);
                            setState(36);
                            stat();
                        }
                        break;
                    }
                }
                break;
                case WHILE:
                    _localctx = new WhileStatContext(_localctx);
                    enterOuterAlt(_localctx, 4);
                {
                    setState(39);
                    match(WHILE);
                    setState(40);
                    match(LPAR);
                    setState(41);
                    expr(0);
                    setState(42);
                    match(RPAR);
                    setState(43);
                    stat();
                }
                break;
                case LCURLY:
                    _localctx = new BlockStatContext(_localctx);
                    enterOuterAlt(_localctx, 5);
                {
                    setState(45);
                    match(LCURLY);
                    setState(49);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LCURLY) | (1L << PRINT) | (1L << BOOL) | (1L << INT) | (1L << WHILE) | (1L << IF) | (1L << BREAK) | (1L << CONTINUE) | (1L << ID))) != 0)) {
                        {
                            {
                                setState(46);
                                stat();
                            }
                        }
                        setState(51);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    }
                    setState(52);
                    match(RCURLY);
                }
                break;
                case PRINT:
                    _localctx = new PrintStatContext(_localctx);
                    enterOuterAlt(_localctx, 6);
                {
                    setState(53);
                    match(PRINT);
                    setState(54);
                    match(LPAR);
                    setState(55);
                    match(STRING);
                    setState(60);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    while (_la == COMMA) {
                        {
                            {
                                setState(56);
                                match(COMMA);
                                setState(57);
                                match(ID);
                            }
                        }
                        setState(62);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    }
                    setState(63);
                    match(RPAR);
                    setState(64);
                    match(SEMI);
                }
                break;
                case BREAK:
                    _localctx = new BreakStatContext(_localctx);
                    enterOuterAlt(_localctx, 7);
                {
                    setState(65);
                    match(BREAK);
                    setState(66);
                    match(SEMI);
                }
                break;
                case CONTINUE:
                    _localctx = new ContStatContext(_localctx);
                    enterOuterAlt(_localctx, 8);
                {
                    setState(67);
                    match(CONTINUE);
                    setState(68);
                    match(SEMI);
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final TargetContext target() throws RecognitionException {
        TargetContext _localctx = new TargetContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_target);
        try {
            setState(77);
            switch (getInterpreter().adaptivePredict(_input, 6, _ctx)) {
                case 1:
                    _localctx = new IdTargetContext(_localctx);
                    enterOuterAlt(_localctx, 1);
                {
                    setState(71);
                    match(ID);
                }
                break;
                case 2:
                    _localctx = new ArrayTargetContext(_localctx);
                    enterOuterAlt(_localctx, 2);
                {
                    setState(72);
                    match(ID);
                    setState(73);
                    match(LSQ);
                    setState(74);
                    expr(0);
                    setState(75);
                    match(RSQ);
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ExprContext expr() throws RecognitionException {
        return expr(0);
    }

    private ExprContext expr(int _p) throws RecognitionException {
        ParserRuleContext _parentctx = _ctx;
        int _parentState = getState();
        ExprContext _localctx = new ExprContext(_ctx, _parentState);
        ExprContext _prevctx = _localctx;
        int _startState = 6;
        enterRecursionRule(_localctx, 6, RULE_expr, _p);
        int _la;
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(96);
                switch (getInterpreter().adaptivePredict(_input, 7, _ctx)) {
                    case 1: {
                        _localctx = new NotExprContext(_localctx);
                        _ctx = _localctx;
                        _prevctx = _localctx;

                        setState(80);
                        match(NOT);
                        setState(81);
                        expr(12);
                    }
                    break;
                    case 2: {
                        _localctx = new ParExprContext(_localctx);
                        _ctx = _localctx;
                        _prevctx = _localctx;
                        setState(82);
                        match(LPAR);
                        setState(83);
                        expr(0);
                        setState(84);
                        match(RPAR);
                    }
                    break;
                    case 3: {
                        _localctx = new ConstExprContext(_localctx);
                        _ctx = _localctx;
                        _prevctx = _localctx;
                        setState(86);
                        _la = _input.LA(1);
                        if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TRUE) | (1L << FALSE) | (1L << NUM))) != 0))) {
                            _errHandler.recoverInline(this);
                        }
                        consume();
                    }
                    break;
                    case 4: {
                        _localctx = new InExprContext(_localctx);
                        _ctx = _localctx;
                        _prevctx = _localctx;
                        setState(87);
                        match(IN);
                        setState(88);
                        match(LPAR);
                        setState(89);
                        match(RPAR);
                    }
                    break;
                    case 5: {
                        _localctx = new ArrayExprContext(_localctx);
                        _ctx = _localctx;
                        _prevctx = _localctx;
                        setState(90);
                        match(ID);
                        setState(91);
                        match(LSQ);
                        setState(92);
                        expr(0);
                        setState(93);
                        match(RSQ);
                    }
                    break;
                    case 6: {
                        _localctx = new IdExprContext(_localctx);
                        _ctx = _localctx;
                        _prevctx = _localctx;
                        setState(95);
                        match(ID);
                    }
                    break;
                }
                _ctx.stop = _input.LT(-1);
                setState(121);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 9, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        if (_parseListeners != null) triggerExitRuleEvent();
                        _prevctx = _localctx;
                        {
                            setState(119);
                            switch (getInterpreter().adaptivePredict(_input, 8, _ctx)) {
                                case 1: {
                                    _localctx = new AddExprContext(new ExprContext(_parentctx, _parentState));
                                    pushNewRecursionContext(_localctx, _startState, RULE_expr);
                                    setState(98);
                                    if (!(precpred(_ctx, 11)))
                                        throw new FailedPredicateException(this, "precpred(_ctx, 11)");
                                    setState(99);
                                    _la = _input.LA(1);
                                    if (!(_la == PLUS || _la == MINUS)) {
                                        _errHandler.recoverInline(this);
                                    }
                                    consume();
                                    setState(100);
                                    expr(12);
                                }
                                break;
                                case 2: {
                                    _localctx = new BitAndExprContext(new ExprContext(_parentctx, _parentState));
                                    pushNewRecursionContext(_localctx, _startState, RULE_expr);
                                    setState(101);
                                    if (!(precpred(_ctx, 10)))
                                        throw new FailedPredicateException(this, "precpred(_ctx, 10)");
                                    setState(102);
                                    match(BIT_AND);
                                    setState(103);
                                    expr(11);
                                }
                                break;
                                case 3: {
                                    _localctx = new BitOrExprContext(new ExprContext(_parentctx, _parentState));
                                    pushNewRecursionContext(_localctx, _startState, RULE_expr);
                                    setState(104);
                                    if (!(precpred(_ctx, 9)))
                                        throw new FailedPredicateException(this, "precpred(_ctx, 9)");
                                    setState(105);
                                    match(BIT_OR);
                                    setState(106);
                                    expr(10);
                                }
                                break;
                                case 4: {
                                    _localctx = new AndExprContext(new ExprContext(_parentctx, _parentState));
                                    pushNewRecursionContext(_localctx, _startState, RULE_expr);
                                    setState(107);
                                    if (!(precpred(_ctx, 8)))
                                        throw new FailedPredicateException(this, "precpred(_ctx, 8)");
                                    setState(108);
                                    match(AND);
                                    setState(109);
                                    expr(9);
                                }
                                break;
                                case 5: {
                                    _localctx = new OrExprContext(new ExprContext(_parentctx, _parentState));
                                    pushNewRecursionContext(_localctx, _startState, RULE_expr);
                                    setState(110);
                                    if (!(precpred(_ctx, 7)))
                                        throw new FailedPredicateException(this, "precpred(_ctx, 7)");
                                    setState(111);
                                    match(OR);
                                    setState(112);
                                    expr(8);
                                }
                                break;
                                case 6: {
                                    _localctx = new CompExprContext(new ExprContext(_parentctx, _parentState));
                                    pushNewRecursionContext(_localctx, _startState, RULE_expr);
                                    setState(113);
                                    if (!(precpred(_ctx, 6)))
                                        throw new FailedPredicateException(this, "precpred(_ctx, 6)");
                                    setState(114);
                                    _la = _input.LA(1);
                                    if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LT) | (1L << GT) | (1L << EQ) | (1L << NE))) != 0))) {
                                        _errHandler.recoverInline(this);
                                    }
                                    consume();
                                    setState(115);
                                    expr(7);
                                }
                                break;
                                case 7: {
                                    _localctx = new FieldExprContext(new ExprContext(_parentctx, _parentState));
                                    pushNewRecursionContext(_localctx, _startState, RULE_expr);
                                    setState(116);
                                    if (!(precpred(_ctx, 13)))
                                        throw new FailedPredicateException(this, "precpred(_ctx, 13)");
                                    setState(117);
                                    match(DOT);
                                    setState(118);
                                    match(ID);
                                }
                                break;
                            }
                        }
                    }
                    setState(123);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 9, _ctx);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            unrollRecursionContexts(_parentctx);
        }
        return _localctx;
    }

    public final TypeContext type() throws RecognitionException {
        TypeContext _localctx = new TypeContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_type);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(124);
                _la = _input.LA(1);
                if (!(_la == BOOL || _la == INT)) {
                    _errHandler.recoverInline(this);
                }
                consume();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public boolean sempred(RuleContext _localctx, int ruleIndex, int predIndex) {
        switch (ruleIndex) {
            case 3:
                return expr_sempred((ExprContext) _localctx, predIndex);
        }
        return true;
    }

    private boolean expr_sempred(ExprContext _localctx, int predIndex) {
        switch (predIndex) {
            case 0:
                return precpred(_ctx, 11);
            case 1:
                return precpred(_ctx, 10);
            case 2:
                return precpred(_ctx, 9);
            case 3:
                return precpred(_ctx, 8);
            case 4:
                return precpred(_ctx, 7);
            case 5:
                return precpred(_ctx, 6);
            case 6:
                return precpred(_ctx, 13);
        }
        return true;
    }

    public static class ProgramContext extends ParserRuleContext {
        public ProgramContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public TerminalNode EOF() {
            return getToken(FragmentParser.EOF, 0);
        }

        public StatContext stat(int i) {
            return getRuleContext(StatContext.class, i);
        }

        public List<StatContext> stat() {
            return getRuleContexts(StatContext.class);
        }

        @Override
        public int getRuleIndex() {
            return RULE_program;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof FragmentListener) ((FragmentListener) listener).enterProgram(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof FragmentListener) ((FragmentListener) listener).exitProgram(this);
        }
    }

    public static class StatContext extends ParserRuleContext {
        public StatContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public StatContext() {
        }

        @Override
        public int getRuleIndex() {
            return RULE_stat;
        }

        public void copyFrom(StatContext ctx) {
            super.copyFrom(ctx);
        }
    }

    public static class IfStatContext extends StatContext {
        public IfStatContext(StatContext ctx) {
            copyFrom(ctx);
        }

        public TerminalNode ELSE() {
            return getToken(FragmentParser.ELSE, 0);
        }

        public TerminalNode IF() {
            return getToken(FragmentParser.IF, 0);
        }

        public ExprContext expr() {
            return getRuleContext(ExprContext.class, 0);
        }

        public StatContext stat(int i) {
            return getRuleContext(StatContext.class, i);
        }

        public List<StatContext> stat() {
            return getRuleContexts(StatContext.class);
        }

        public TerminalNode LPAR() {
            return getToken(FragmentParser.LPAR, 0);
        }

        public TerminalNode RPAR() {
            return getToken(FragmentParser.RPAR, 0);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof FragmentListener) ((FragmentListener) listener).enterIfStat(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof FragmentListener) ((FragmentListener) listener).exitIfStat(this);
        }
    }

    public static class BlockStatContext extends StatContext {
        public BlockStatContext(StatContext ctx) {
            copyFrom(ctx);
        }

        public TerminalNode RCURLY() {
            return getToken(FragmentParser.RCURLY, 0);
        }

        public TerminalNode LCURLY() {
            return getToken(FragmentParser.LCURLY, 0);
        }

        public StatContext stat(int i) {
            return getRuleContext(StatContext.class, i);
        }

        public List<StatContext> stat() {
            return getRuleContexts(StatContext.class);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof FragmentListener) ((FragmentListener) listener).enterBlockStat(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof FragmentListener) ((FragmentListener) listener).exitBlockStat(this);
        }
    }

    public static class ContStatContext extends StatContext {
        public ContStatContext(StatContext ctx) {
            copyFrom(ctx);
        }

        public TerminalNode CONTINUE() {
            return getToken(FragmentParser.CONTINUE, 0);
        }

        public TerminalNode SEMI() {
            return getToken(FragmentParser.SEMI, 0);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof FragmentListener) ((FragmentListener) listener).enterContStat(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof FragmentListener) ((FragmentListener) listener).exitContStat(this);
        }
    }

    public static class DeclContext extends StatContext {
        public DeclContext(StatContext ctx) {
            copyFrom(ctx);
        }

        public TerminalNode ID() {
            return getToken(FragmentParser.ID, 0);
        }

        public TerminalNode ASSIGN() {
            return getToken(FragmentParser.ASSIGN, 0);
        }

        public ExprContext expr() {
            return getRuleContext(ExprContext.class, 0);
        }

        public TerminalNode SEMI() {
            return getToken(FragmentParser.SEMI, 0);
        }

        public TypeContext type() {
            return getRuleContext(TypeContext.class, 0);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof FragmentListener) ((FragmentListener) listener).enterDecl(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof FragmentListener) ((FragmentListener) listener).exitDecl(this);
        }
    }

    public static class PrintStatContext extends StatContext {
        public PrintStatContext(StatContext ctx) {
            copyFrom(ctx);
        }

        public List<TerminalNode> ID() {
            return getTokens(FragmentParser.ID);
        }

        public TerminalNode PRINT() {
            return getToken(FragmentParser.PRINT, 0);
        }

        public TerminalNode SEMI() {
            return getToken(FragmentParser.SEMI, 0);
        }

        public List<TerminalNode> COMMA() {
            return getTokens(FragmentParser.COMMA);
        }

        public TerminalNode STRING() {
            return getToken(FragmentParser.STRING, 0);
        }

        public TerminalNode ID(int i) {
            return getToken(FragmentParser.ID, i);
        }

        public TerminalNode LPAR() {
            return getToken(FragmentParser.LPAR, 0);
        }

        public TerminalNode RPAR() {
            return getToken(FragmentParser.RPAR, 0);
        }

        public TerminalNode COMMA(int i) {
            return getToken(FragmentParser.COMMA, i);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof FragmentListener) ((FragmentListener) listener).enterPrintStat(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof FragmentListener) ((FragmentListener) listener).exitPrintStat(this);
        }
    }

    public static class AssignStatContext extends StatContext {
        public AssignStatContext(StatContext ctx) {
            copyFrom(ctx);
        }

        public TargetContext target() {
            return getRuleContext(TargetContext.class, 0);
        }

        public TerminalNode ASSIGN() {
            return getToken(FragmentParser.ASSIGN, 0);
        }

        public ExprContext expr() {
            return getRuleContext(ExprContext.class, 0);
        }

        public TerminalNode SEMI() {
            return getToken(FragmentParser.SEMI, 0);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof FragmentListener) ((FragmentListener) listener).enterAssignStat(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof FragmentListener) ((FragmentListener) listener).exitAssignStat(this);
        }
    }

    public static class BreakStatContext extends StatContext {
        public BreakStatContext(StatContext ctx) {
            copyFrom(ctx);
        }

        public TerminalNode BREAK() {
            return getToken(FragmentParser.BREAK, 0);
        }

        public TerminalNode SEMI() {
            return getToken(FragmentParser.SEMI, 0);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof FragmentListener) ((FragmentListener) listener).enterBreakStat(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof FragmentListener) ((FragmentListener) listener).exitBreakStat(this);
        }
    }

    public static class WhileStatContext extends StatContext {
        public WhileStatContext(StatContext ctx) {
            copyFrom(ctx);
        }

        public ExprContext expr() {
            return getRuleContext(ExprContext.class, 0);
        }

        public StatContext stat() {
            return getRuleContext(StatContext.class, 0);
        }

        public TerminalNode LPAR() {
            return getToken(FragmentParser.LPAR, 0);
        }

        public TerminalNode RPAR() {
            return getToken(FragmentParser.RPAR, 0);
        }

        public TerminalNode WHILE() {
            return getToken(FragmentParser.WHILE, 0);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof FragmentListener) ((FragmentListener) listener).enterWhileStat(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof FragmentListener) ((FragmentListener) listener).exitWhileStat(this);
        }
    }

    public static class TargetContext extends ParserRuleContext {
        public TargetContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public TargetContext() {
        }

        @Override
        public int getRuleIndex() {
            return RULE_target;
        }

        public void copyFrom(TargetContext ctx) {
            super.copyFrom(ctx);
        }
    }

    public static class IdTargetContext extends TargetContext {
        public IdTargetContext(TargetContext ctx) {
            copyFrom(ctx);
        }

        public TerminalNode ID() {
            return getToken(FragmentParser.ID, 0);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof FragmentListener) ((FragmentListener) listener).enterIdTarget(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof FragmentListener) ((FragmentListener) listener).exitIdTarget(this);
        }
    }

    public static class ArrayTargetContext extends TargetContext {
        public ArrayTargetContext(TargetContext ctx) {
            copyFrom(ctx);
        }

        public TerminalNode ID() {
            return getToken(FragmentParser.ID, 0);
        }

        public ExprContext expr() {
            return getRuleContext(ExprContext.class, 0);
        }

        public TerminalNode RSQ() {
            return getToken(FragmentParser.RSQ, 0);
        }

        public TerminalNode LSQ() {
            return getToken(FragmentParser.LSQ, 0);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof FragmentListener) ((FragmentListener) listener).enterArrayTarget(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof FragmentListener) ((FragmentListener) listener).exitArrayTarget(this);
        }
    }

    public static class ExprContext extends ParserRuleContext {
        public ExprContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public ExprContext() {
        }

        @Override
        public int getRuleIndex() {
            return RULE_expr;
        }

        public void copyFrom(ExprContext ctx) {
            super.copyFrom(ctx);
        }
    }

    public static class ArrayExprContext extends ExprContext {
        public ArrayExprContext(ExprContext ctx) {
            copyFrom(ctx);
        }

        public TerminalNode ID() {
            return getToken(FragmentParser.ID, 0);
        }

        public ExprContext expr() {
            return getRuleContext(ExprContext.class, 0);
        }

        public TerminalNode RSQ() {
            return getToken(FragmentParser.RSQ, 0);
        }

        public TerminalNode LSQ() {
            return getToken(FragmentParser.LSQ, 0);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof FragmentListener) ((FragmentListener) listener).enterArrayExpr(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof FragmentListener) ((FragmentListener) listener).exitArrayExpr(this);
        }
    }

    public static class InExprContext extends ExprContext {
        public InExprContext(ExprContext ctx) {
            copyFrom(ctx);
        }

        public TerminalNode LPAR() {
            return getToken(FragmentParser.LPAR, 0);
        }

        public TerminalNode RPAR() {
            return getToken(FragmentParser.RPAR, 0);
        }

        public TerminalNode IN() {
            return getToken(FragmentParser.IN, 0);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof FragmentListener) ((FragmentListener) listener).enterInExpr(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof FragmentListener) ((FragmentListener) listener).exitInExpr(this);
        }
    }

    public static class OrExprContext extends ExprContext {
        public OrExprContext(ExprContext ctx) {
            copyFrom(ctx);
        }

        public List<ExprContext> expr() {
            return getRuleContexts(ExprContext.class);
        }

        public ExprContext expr(int i) {
            return getRuleContext(ExprContext.class, i);
        }

        public TerminalNode OR() {
            return getToken(FragmentParser.OR, 0);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof FragmentListener) ((FragmentListener) listener).enterOrExpr(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof FragmentListener) ((FragmentListener) listener).exitOrExpr(this);
        }
    }

    public static class FieldExprContext extends ExprContext {
        public FieldExprContext(ExprContext ctx) {
            copyFrom(ctx);
        }

        public TerminalNode DOT() {
            return getToken(FragmentParser.DOT, 0);
        }

        public TerminalNode ID() {
            return getToken(FragmentParser.ID, 0);
        }

        public ExprContext expr() {
            return getRuleContext(ExprContext.class, 0);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof FragmentListener) ((FragmentListener) listener).enterFieldExpr(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof FragmentListener) ((FragmentListener) listener).exitFieldExpr(this);
        }
    }

    public static class ParExprContext extends ExprContext {
        public ParExprContext(ExprContext ctx) {
            copyFrom(ctx);
        }

        public ExprContext expr() {
            return getRuleContext(ExprContext.class, 0);
        }

        public TerminalNode LPAR() {
            return getToken(FragmentParser.LPAR, 0);
        }

        public TerminalNode RPAR() {
            return getToken(FragmentParser.RPAR, 0);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof FragmentListener) ((FragmentListener) listener).enterParExpr(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof FragmentListener) ((FragmentListener) listener).exitParExpr(this);
        }
    }

    public static class BitOrExprContext extends ExprContext {
        public BitOrExprContext(ExprContext ctx) {
            copyFrom(ctx);
        }

        public List<ExprContext> expr() {
            return getRuleContexts(ExprContext.class);
        }

        public ExprContext expr(int i) {
            return getRuleContext(ExprContext.class, i);
        }

        public TerminalNode BIT_OR() {
            return getToken(FragmentParser.BIT_OR, 0);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof FragmentListener) ((FragmentListener) listener).enterBitOrExpr(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof FragmentListener) ((FragmentListener) listener).exitBitOrExpr(this);
        }
    }

    public static class NotExprContext extends ExprContext {
        public NotExprContext(ExprContext ctx) {
            copyFrom(ctx);
        }

        public TerminalNode NOT() {
            return getToken(FragmentParser.NOT, 0);
        }
